--- a/gaming/src/App.css
+++ b/gaming/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-image: url(./assets/images/Gamerbackground.gif);
+  background-size: cover;
+  padding: 0px 10px 10px 10px;
 }
 
 .App-logo {
